# OpenGuild-Exploration

./: .pnp.cjs  README.md  package-lock.json  package.json
articles/: article-1.mdx  technical-article-01.md
projects/chat_contract/: Cargo.toml
projects/chat_contract/src/: Cargo.toml  lib.rs  test.rs
projects/note-taking/note-taking-app/: Cargo.toml  lib.rs
projects/note-taking/note-taking-app-ui/note-taking-app-ui/: package.json  tsconfig.json
projects/note-taking/note-taking-app-ui/note-taking-app-ui/app/: app.tsx  layout.tsx  page.tsx
projects/note-taking/note-taking-app-ui/note-taking-app-ui/components/: AddNoteButton.tsx  ConnectButton.tsx  ContractProvider.tsx  NoteItem.tsx  NoteList.tsx  NoteTakingProvider.tsx
projects/note-taking/note-taking-app-ui/note-taking-app-ui/lib/: utils.ts
projects/note-taking/note-taking-app-ui/note-taking-app-ui/lib/todo-app/: constructor-query.d.ts  constructor-tx.d.ts  events.d.ts  index.d.ts  query.d.ts  tx.d.ts  types.d.ts
