[package]
name = "chat_contract"
version = "0.1.0"
edition = "2021"

# Dependencies
[dependencies]
ink = { version = "3.0", default-features = false, features = ["std"] }

# Features
[features]
default = []
e2e-tests = []
ink-as-dependency = []
std = []

# Library configuration
[lib]
crate-type = ["cdylib"]

