[package]
name = "chat_contract"
version = "0.1.0"
edition = "2021"
[lib]
path = "lib.rs"  # Adjust if your lib.rs file is located elsewhere
crate-type = ["cdylib"]
[dependencies]
ink = { version = "5.0.0-rc.3", default-features = false, features = ["std"] }
[features]
default = []  # Add any other features you may need
