[package]
name = "chat_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # No need for 'path' line as it defaults to 'src/lib.rs'

[dependencies]
ink = { version = "5.0.0-rc.3", default-features = false, features = ["std"] }

[features]
default = []  # You can add more features here if needed
